[gd_scene load_steps=4 format=3 uid="uid://l4gufc3u6gnk"]

[ext_resource type="Script" path="res://Scripts/level_3.gd" id="1_iadf1"]
[ext_resource type="Texture2D" uid="uid://clk5fy4ftenbe" path="res://Assets/Sprites/Levels/Ordenador-lvl3.png" id="2_qvmdx"]
[ext_resource type="FontFile" uid="uid://bre1cjdaepuvc" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="3_rsyrv"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_iadf1")

[node name="Ordenador-lvl3" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_qvmdx")

[node name="CurrentWord" type="Label" parent="."]
offset_left = 289.0
offset_top = 171.0
offset_right = 989.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 100
text = "Pendejo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="+1" type="Label" parent="."]
offset_left = 837.0
offset_top = 385.0
offset_right = 1229.0
offset_bottom = 522.0
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 100
text = "+1"
horizontal_alignment = 1

[node name="TypeWord" type="Label" parent="."]
offset_left = 492.0
offset_top = 375.0
offset_right = 792.0
offset_bottom = 516.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 50
text = "
Pendej"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Guiones" type="Label" parent="."]
offset_left = 492.0
offset_top = 382.0
offset_right = 792.0
offset_bottom = 523.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 50
text = "
Pendej"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[node name="Tiempo" type="Label" parent="."]
offset_left = 63.0
offset_top = 65.0
offset_right = 103.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 50

[node name="Puntos" type="Label" parent="."]
offset_left = 942.0
offset_top = 76.0
offset_right = 1047.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("3_rsyrv")
theme_override_font_sizes/font_size = 50

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
